<resources>
    <string name="app_name">Launcher</string>
    <string name="home_recommend_hint">尚無節目推薦</string>
    <string name="home_list_recommend_title_program">本週強檔</string>
    <string name="home_list_recommend_title_app">應用程式推薦</string>
    <string name="home_list_recommend_title_app_and_game">應用程式與遊戲</string>
    <string name="rec_program_qrcode">詳細訊息請掃描</string>
    <string name="home_menu_search">搜尋</string>
    <string name="home_menu_epg">節目表</string>
    <string name="home_menu_record">錄影清單</string>
    <string name="home_menu_weather">天氣</string>
    <string name="home_menu_ranking">排行榜</string>
    <string name="home_menu_mail">訊息通知</string>
    <string name="home_menu_account">會員專區</string>
    <string name="home_menu_music">音樂入口</string>
    <string name="home_menu_notification">系統通知</string>
    <string name="home_menu_settings">系統設定</string>
    <string name="mini_epg_record">錄影</string>
    <string name="mini_epg_menu">功能選單</string>
    <string name="mini_epg_remind">預約提醒</string>
    <string name="mini_epg_genre">類別</string>
    <string name="mini_epg_info">節目簡介</string>
    <string name="epg_actors">演員: </string>
    <string name="epg_bottom">節目表已到底</string>
    <string name="epg_directors">導演: </string>
    <string name="epg_display_mode">顯示模式</string>
    <string name="epg_expired">播映完畢</string>
    <string name="epg_host">主持人: </string>
    <string name="epg_list_channel">頻道</string>
    <string name="epg_list_date">日期</string>
    <string name="epg_list_program">節目</string>
    <string name="epg_loading">讀取中...</string>
    <string name="epg_lock_data">節目資訊鎖碼保護</string>
    <string name="epg_no_data">尚無節目資訊</string>
    <string name="epg_no_genre">此類別尚無頻道</string>
    <string name="epg_today">今天</string>
    <string name="epg_tomorrow">明天</string>
    <string name="dialog_audio_pri">主聲道</string>
    <string name="dialog_audio_sec">副聲道</string>
    <string name="dialog_count_channel">個頻道已上鎖</string>
    <string name="dialog_function_menu">功能選單</string>
    <string name="dialog_item_audio">語音選擇</string>
    <string name="dialog_item_caption">字幕選擇</string>
    <string name="dialog_item_hd">畫質選擇</string>
    <string name="dialog_lang_ch">中文</string>
    <string name="dialog_lang_disable">關閉</string>
    <string name="dialog_lang_en">英文</string>
    <string name="dialog_lang_jp">日文</string>
    <string name="dialog_lang_kr">韓文</string>
    <string name="dialog_lang_none">無</string>
    <string name="dialog_lang_vt">越南文</string>
    <string name="dialog_next_step">下一步</string>
    <string name="dialog_resolution_1080i">1080i</string>
    <string name="dialog_resolution_1080p">1080P</string>
    <string name="dialog_resolution_480p">480P</string>
    <string name="dialog_resolution_720p">720P</string>
    <string name="dialog_time_clear">清除時間</string>
    <string name="dialog_time_delete">刪除時段</string>
    <string name="dialog_time_error">時間輸入錯誤</string>
    <string name="dialog_time_lock_all_day">全天</string>
    <string name="dialog_time_lock_label">單一時段</string>
    <string name="dialog_time_lock_time">起訖時間</string>
    <string name="dialog_time_lock_title">時段鎖</string>
    <string name="dialog_title_channel_locked">鎖碼頻道</string>
    <string name="dialog_und">未定義</string>
    <string name="dialog_unlock_channel">未上鎖頻道</string>
    <string name="lo_epg_textv_unlock_title_text1">請輸入</string>
    <string name="lo_epg_textv_unlock_title_text3">密碼</string>
    <string name="lo_epg_textv_pass_fail_incorrect_pass">密碼不正確,請重新輸入</string>
    <string name="lo_epg_sub_textv_loading">讀取中...</string>
    <string name="lo_epg_sub_list_textv_channel">頻道</string>
    <string name="lo_epg_sub_list_textv_date">日期</string>
    <string name="lo_epg_sub_list_textv_program">節目</string>
    <string name="genre_adult">成人</string>
    <string name="genre_all">全部</string>
    <string name="genre_current_highlight">目前類別</string>
    <string name="genre_current_hint">目前類別：</string>
    <string name="genre_education">教育</string>
    <string name="genre_hd">高畫質</string>
    <string name="genre_kids">兒童</string>
    <string name="genre_movie">電影</string>
    <string name="genre_music">音樂</string>
    <string name="genre_news">新聞</string>
    <string name="genre_religion">宗教</string>
    <string name="genre_shopping">購物</string>
    <string name="genre_sports">體育</string>
    <string name="genre_uhd">4K</string>
    <string name="genre_variety">綜合</string>
    <string name="start_voice_recognition">開始語音辨識</string>
    <string name="rank_box_num">機上盒數</string>
    <string name="rank_program">節目</string>
    <string name="rank_ranking">排行</string>
    <string name="rank_ratio">收視率%</string>
    <string name="rank_ratio2">收視率</string>
    <string name="rank_title">收視排行榜</string>
    <string name="rank_title2">收視排行</string>
    <string name="rank_watching">人正在觀看</string>
    <string name="mail_inbox">收件夾</string>
    <string name="mail_setting">訊息設定</string>
    <string name="mail_no_data">尚無清單</string>
    <string name="mail_coupon">好康活動</string>
    <string name="mail_latest_news">最新消息</string>
    <string name="mail_popular">強檔推薦</string>
    <string name="mail_service">服務訊息</string>
    <string name="mail_setting_hint">可開啟/關閉 不同種類訊息的接收</string>
    <string name="mail_shopping">購物優惠</string>
    <string name="mail_close">關閉</string>
    <string name="no_data">尚無資訊</string>
    <string name="settings_signal_quality">信號品質</string>
    <string name="settings_signal_detecting_hint">信號偵測中，請稍後</string>
    <string name="settings_signal_detecting_hint_detecting">已偵測到信號,每秒更新中</string>
    <string name="settings_signal_detecting_hint_fail">無法偵測到信號，請確認同軸纜線是否有接妥</string>
    <string name="settings_signal_strength">信號強度</string>
    <string name="settings_channel_current_highlight">現正播放</string>
    <string name="settings_channel_current_hint">現正播放：</string>
    <string name="settings_channel_freq_scan">單頻點掃描</string>
    <string name="settings_channel_frequency">頻率</string>
    <string name="settings_channel_lock_title">請輸入 親子鎖 密碼</string>
    <string name="settings_channel_lock_title1">請輸入</string>
    <string name="settings_channel_lock_title2">密碼</string>
    <string name="settings_channel_prepare_scan_subtitle">請先檢查訊號源線路是否有接上數位機上盒，如果有即可開始操作</string>
    <string name="settings_channel_prepare_scan_title">手動頻道掃描</string>
    <string name="settings_channel_qam">QAM</string>
    <string name="settings_channel_scan">頻道掃描</string>
    <string name="settings_channel_scan_clear">清除</string>
    <string name="settings_channel_scan_failed">掃描失敗，沒有發現頻道，請確認Cable是否接妥</string>
    <string name="settings_channel_scan_no_signal">掃描失敗，無法偵測到信號，請確認Cable是否接妥</string>
    <string name="settings_channel_scan_reset">恢復預設值</string>
    <string name="settings_channel_scan_timeout">掃描失敗，超過30秒沒訊號反應，請確認Cable是否接妥</string>
    <string name="settings_channel_scanning_back">返回</string>
    <string name="settings_channel_scanning_completed">頻道掃描已完成</string>
    <string name="settings_channel_scanning_hint">頻道掃描中，請稍後</string>
    <string name="settings_channel_scanning_progress_hint">掃描進度</string>
    <string name="settings_channel_scanning_sub_hint_audio">個廣播電台</string>
    <string name="settings_channel_scanning_sub_hint_video">個頻道</string>
    <string name="settings_channel_signal_scan">信號偵測</string>
    <string name="settings_channel_symbol_rate">Symbol Rate</string>
    <string name="settings_channel_unlock_title1">請輸入頻道鎖密碼</string>
    <string name="settings_channel_unlock_title2">請輸入工程密碼</string>
    <string name="settings_rms_agree">同意</string>
    <string name="settings_rms_hint_title_first">「我同意貴公司蒐集本人向貴公司申裝所有服務(包含未來申請服務)之收視行為，日後如有變更，亦得使用機上盒點選「停止蒐集」，日後如再有需要，則得再使用機上盒點選「同意蒐集」。」若您同意以上聲明，請您點選「同意」，本公司收到您的「同意」回覆後，機上盒將傳送確認訊息給您。</string>
    <string name="settings_rms_hint_title_second">本公司尚未收到您對使用行為收集同意簡訊之回覆，請問是否要再發送一次簡訊以利您的回覆?</string>
    <string name="settings_rms_not_agree">取消</string>
    <string name="settings_rms_not_show_again">開機時不再顯示</string>
    <string name="settings_rms_title">收視率調查</string>
    <string name="settings_hint_rcu_dpad_select">選擇</string>
    <string name="dmg_settings_signal_excellent">優</string>
    <string name="dmg_settings_signal_good">好</string>
    <string name="dmg_settings_signal_isp1">站點1測試</string>
    <string name="dmg_settings_signal_isp2">站點2測試</string>
    <string name="dmg_settings_signal_moderate">普通</string>
    <string name="dmg_settings_signal_poor">差</string>
    <string name="dmg_settings_signal_test_stop_connection">離開測試</string>
    <string name="dmg_settings_signal_ethernet_connected">Ethernet 已連線</string>
    <string name="dmg_settings_signal_connection_test_title">連線品質測試</string>
    <string name="dmg_settings_signal_network_disconnected">未連線</string>
    <string name="dmg_settings_signal_network_status">網路狀態</string>
    <string name="dmg_settings_signal_test_start_connection">開始測試</string>
    <string name="dmg_settings_signal_wifi_connected">Wifi 已連線</string>
    <string name="dmg_settings_category_title">機上盒設定</string>
    <string name="dmg_settings_channel_lock">頻道鎖</string>
    <string name="dmg_settings_engineering_setting">工程設定</string>
    <string name="dmg_settings_engineering_setting_channel_scan">手動頻道掃描</string>
    <string name="dmg_settings_engineering_setting_connect_test">連線測試</string>
    <string name="dmg_settings_engineering_setting_error_log">錄影失敗紀錄</string>
    <string name="dmg_settings_engineering_setting_info_hint">所有訊息提醒</string>
    <string name="dmg_settings_engineering_setting_usb_update">USB 軟體更新</string>
    <string name="dmg_settings_connection_test">連線測試</string>
    <string name="dmg_settings_signal_detect">信號偵測</string>
    <string name="dmg_settings_channel_scan">頻道掃描</string>
    <string name="dmg_settings_introduction_time">簡介時間</string>
    <string name="dmg_settings_ratings_survey">收視率調查</string>
    <string name="dmg_settings_info_time_entries_three_second">3 秒</string>
    <string name="dmg_settings_info_time_entries_five_second">5 秒</string>
    <string name="dmg_settings_info_time_entries_ten_second">10 秒</string>
    <string name="dmg_settings_rms_switch_opening">開通中</string>
    <string name="dmg_settings_rms_switch_on">開啟</string>
    <string name="dmg_settings_rms_switch_off">關閉</string>
    <string name="parental_lock_entries_6">保護級</string>
    <string name="parental_lock_entries_12">輔12級</string>
    <string name="parental_lock_entries_15">輔15級</string>
    <string name="parental_lock_entries_18">限制級</string>
    <string name="parental_lock_entries_0">無</string>
    <string name="dmg_settings_channel_lock_channel_lock">鎖碼頻道</string>
    <string name="dmg_settings_channel_lock_channel_lock_count">0 個頻道</string>
    <string name="dmg_settings_channel_lock_channel_lock_count_no_number">個頻道</string>
    <string name="tv_nagra_license_reset_title">清除授權</string>
    <string name="firmware_version_title">Image Version</string>
    <string name="provision_info">開通資訊</string>
    <string name="provision_info_SO">SO</string>
    <string name="provision_info_Home_ID">Home ID</string>
    <string name="provision_info_NIT">NIT</string>
    <string name="provision_info_SI_NIT">SI NIT</string>
    <string name="provision_info_MOBILE">Mobile</string>
    <string name="provision_info_BAT_ID">BAT ID</string>
    <string name="provision_info_ZIP_CODE">Zip Code</string>
    <string name="hint_rcu_cancel">返回</string>
    <string name="hint_rcu_delete">刪除</string>
    <string name="hint_rcu_menu">功能選單</string>
    <string name="hint_rcu_play">播放</string>
    <string name="hint_rcu_stop">離開</string>
    <string name="hint_fullscreen">全螢幕</string>
    <string name="hint_program_intro">節目介紹</string>
    <string name="install_system_update">安裝系統更新</string>
    <string name="install_time_now">立即更新</string>
    <string name="install_time_2hr">2小時後提醒</string>
    <string name="install_time_1day">1天後提醒</string>
    <string name="install_stop_reminding">不再提醒</string>
</resources>