<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hint_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:descendantFocusability="blocksDescendants">


    <com.prime.launcher.CustomView.TimeViewKeyHint android:id="@+id/hint_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/hint_container"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!-- RED -->
        <ImageView  android:id="@+id/fullscreen_icon"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/hint_red"
            tools:ignore="ContentDescription" />
        <TextView   android:id="@+id/fullscreen_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:text="@string/hint_fullscreen"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"/>
        <!-- GREEN -->
        <ImageView  android:id="@+id/green_icon"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/hint_green"
            tools:ignore="ContentDescription" />
        <TextView   android:id="@+id/green_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:text="@string/hint_rcu_menu"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"/>
        <!-- YELLOW -->
        <ImageView  android:id="@+id/yellow_icon"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/hint_yellow"
            tools:ignore="ContentDescription" />
        <TextView   android:id="@+id/yellow_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:text="@string/hint_rcu_stop"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"/>
        <!-- BLUE -->
        <ImageView  android:id="@+id/blue_icon"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/hint_blue"
            tools:ignore="ContentDescription" />
        <TextView   android:id="@+id/blue_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:text="@string/hint_rcu_delete"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"/>
        <!-- BACK -->
        <ImageView  android:id="@+id/bottom_back_icon"
            android:layout_width="@dimen/mini_epg_hint_info_lock_icon_width"
            android:layout_height="18dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:visibility="gone"
            android:scaleType="centerInside"
            android:src="@drawable/hint_back"
            tools:ignore="ContentDescription" />
        <TextView   android:id="@+id/bottom_back_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/hint_rcu_cancel"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"/>
        <!-- intro -->
        <ImageView  android:id="@+id/bottom_intro_icon"
            android:layout_width="@dimen/mini_epg_hint_info_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:visibility="gone"
            android:scaleType="centerInside"
            android:src="@drawable/hint_intro"
            tools:ignore="ContentDescription" />
        <TextView   android:id="@+id/bottom_intro_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/hint_program_intro"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"/>
        <!-- OK -->
        <ImageView  android:id="@+id/ok_icon"
            android:layout_width="@dimen/mini_epg_hint_info_lock_icon_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:visibility="visible"
            android:scaleType="centerInside"
            android:src="@drawable/hint_ok"
            tools:ignore="ContentDescription" />
        <TextView   android:id="@+id/ok_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:visibility="visible"
            android:text="@string/hint_rcu_play"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="2"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>