<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030">

    <!-- Left side text -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="600dp" />

    <!-- Right side buttons -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lo_constraintlayout_left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="#ff303030"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:text="@string/install_system_update"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <TextView-->
<!--            android:id="@+id/subtitle_text"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="更新檔已下載完成"-->
<!--            android:textColor="#BBBBBB"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintStart_toStartOf="@+id/title_text"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/title_text" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lo_constraintlayout_right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3">

        <Button
            android:id="@+id/lo_update_now_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center|left"
            android:paddingLeft="20dp"
            android:text="@string/install_time_now"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/lo_remind_in_2_hours_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|left"
            android:background="?android:attr/selectableItemBackground"
            android:paddingLeft="20dp"
            android:text="@string/install_time_2hr"
            android:textColor="#BBBBBB"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/lo_update_now_btn"
            app:layout_constraintTop_toBottomOf="@+id/lo_update_now_btn" />

        <Button
            android:id="@+id/lo_remind_in_1_day_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|left"
            android:background="?android:attr/selectableItemBackground"
            android:paddingLeft="20dp"
            android:text="@string/install_time_1day"
            android:textColor="#BBBBBB"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/lo_remind_in_2_hours_btn"
            app:layout_constraintTop_toBottomOf="@+id/lo_remind_in_2_hours_btn" />

        <Button
            android:id="@+id/lo_do_not_remind_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|left"
            android:background="?android:attr/selectableItemBackground"
            android:paddingLeft="20dp"
            android:text="@string/install_stop_reminding"
            android:textColor="#BBBBBB"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/lo_remind_in_1_day_btn"
            app:layout_constraintTop_toBottomOf="@+id/lo_remind_in_1_day_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
